--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/public-projects/assets/index.49cdee45.js"></script>
-    <link rel="stylesheet" href="/public-projects/assets/index.b5572879.css">
+    <script type="module" crossorigin src="https://murilobarbosa2002.github.io/public-projects/assets/index.49cdee45.js"></script>
+    <link rel="stylesheet" href="https://murilobarbosa2002.github.io/public-projects/assets/index.b5572879.css">
   </head>
   <body>
     <div id="root"></div>
